removed "sugar" as a dependency; replaced with underscore

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "dependencies": {
     "jade": "~0.28",
+    "requirejs": "~2",
     "cli-color": "~0.2",
     "commander": "~0.5",
     "jsftp": "~0.5",
