--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
   "private": true,
   "name": "sumn",
+  "version": "0.0.4",
   "description": "Start Up a Microsite Now - a command-line tool for microsite front-end management.",
-  "version": "0.1.0",
   "dependencies": {
     "jade": "~0.28",
-    "requirejs": "~2",
+    "requirejs": "~2.0",
     "cli-color": "~0.2",
     "commander": "~0.5",
     "jsftp": "~0.5",
-    "open": "0.0.2",
+    "open": "0.0.x",
     "prompt": "~0.2",
-    "sugar": "~1.3",
     "underscore": "~1.4",
     "wrench": "~1.3"
   },
   "devDependencies": {
+    "jshint": "~1.0",
+    "mocha": "1.5.x"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/okize/sumn"
+  },
+  "bugs": {
+    "url": "https://github.com/okize/sumn/issues"
   },
   "bin": {
     "sumn": "./sumn.js"
@@ -24,5 +32,9 @@
   "engine": {
     "node": "0.8.x",
     "npm": "1.1.x"
-  }
+  },
+  "licenses": [{
+    "type": "MIT",
+    "url": "https://github.com/okize/sumn/blob/master/license.md"
+  }]
 }
