--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "requirejs": "~2.0",
     "cli-color": "0.2.x",
     "commander": "1.1.x",
+    "ftp": "0.2.x",
     "jsftp": "0.5.x",
     "open": "0.0.x",
     "underscore": "~1.4",
@@ -32,6 +33,9 @@
   "engine": {
     "node": "0.8.x",
     "npm": "1.1.x"
+  },
+  "scripts": {
+    "test": "node ./tests/lint.js"
   },
   "licenses": [{
     "type": "MIT",
