added spanich translations

--- a/lib/config.tmp.json
+++ b/lib/config.tmp.json
@@ -2,6 +2,7 @@
   "username": "",
   "fullname": "",
   "email": "",
+  "language": "en",
   "os": "",
   "browser": "",
   "localDevelopmentServer": "",
