--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "jshint": "0.9.1",
     "volo": "0.2.x",
+    "bower": "0.8.x",
     "mocha": "1.5.x"
   },
   "repository": {
