--- a/lib/config.tmp.json
+++ b/lib/config.tmp.json
@@ -5,6 +5,7 @@
   "language": "en",
   "os": "",
   "browser": "",
+  "localDocumentationServer": "",
   "localDevelopmentServer": "",
   "localProductionServer": "",
   "ftp": {
