--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jshint": "0.9.1",
     "volo": "0.2.x",
     "bower": "0.8.x",
+    "jade": "0.28.x",
     "mocha": "1.5.x"
   },
   "repository": {
@@ -49,10 +50,10 @@
   "volo": {
     "baseUrl": "./src/sites/_global/javascript",
     "dependencies": {
-      "addThisShare": "github:okize/addThisShare/v1.0.3",
+      "addThisShare": "github:okize/addThisShare/v1.0.6",
       "contentMatrix": "github:okize/contentMatrix/v1.0.0",
       "contentNavigationCarousel": "github:okize/contentNavigationCarousel/v1.0.0",
-      "contentTabs": "github:okize/contentTabs/v1.0.2",
+      "contentTabs": "github:okize/contentTabs/v1.0.3",
       "featuredVideo": "github:okize/featuredVideo/v1.1.3",
       "filmstripCarousel": "github:okize/filmstripCarousel/v1.0.4",
       "slideProjectorCarousel": "github:okize/slideProjectorCarousel/v1.0.1",
