--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "underscore": "~1.4",
     "wrench": "~1.3",
-    "jade": "~0.28",
+    "jade": "0.28.x",
     "requirejs": "2.1.x",
+    "volo": "0.2.x",
     "cli-color": "0.2.x",
     "commander": "1.1.x",
     "open": "0.0.x",
@@ -18,11 +19,7 @@
   },
   "devDependencies": {
     "debug": "0.7.x",
-    "jshint": "0.9.1",
-    "volo": "0.2.x",
-    "bower": "0.8.x",
-    "jade": "0.28.x",
-    "mocha": "1.5.x"
+    "jshint": "0.9.1"
   },
   "repository": {
     "type": "git",
